project(tupac)
cmake_minimum_required(VERSION 2.8)
find_package(LLVM REQUIRED CONFIG)
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
add_subdirectory(src)
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
llvm_map_components_to_libnames(llvm_libs core mcjit)
target_link_libraries(${PROJECT_NAME} ${llvm_libs})
